moved site images to CDN

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,9 @@ email: andy.mehalick@orangejetpack.com
 description: A software development process and technology blog; a look at the tools and techniques for building better software.
 baseurl: ""
 url: https://andy.mehalick.com
-imge: https://andy.mehalick.com/content/images/photo-square.jpg
+imge: https://az808808.vo.msecnd.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg
 twitter_username: andymehalick
 github_username: andy-mehalick
-fb_admins: 1483897037
 google_plus: https://plus.google.com/113902592100905338618
 
 # Build settings
