--- a/src/_config.yml
+++ b/src/_config.yml
@@ -4,14 +4,13 @@ email: andy.mehalick@orangejetpack.com
 description: A software development process and technology blog; a look at the tools and techniques for building better software.
 baseurl: ""
 url: https://andy.mehalick.com
-imge: https://az808808.vo.msecnd.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg
+imge: https://andy.azureedge.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg
 twitter_username: andymehalick
 github_username: andy-mehalick
 google_plus: https://plus.google.com/113902592100905338618
 
 # Build settings
 markdown: kramdown
-highlighter: rouge
 
 # Outputting
 permalink: /:year/:month/:day/:title/
