update index content

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""
 url: https://andy.mehalick.com
 imge: https://andy.azureedge.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg
 twitter_username: andymehalick
-github_username: andy-mehalick
+github_username: mehalick
 google_plus: https://plus.google.com/113902592100905338618
 
 # Build settings
