--- a/src/_config.yml
+++ b/src/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Andy Mehalick
-email: andy.mehalick@orangejetpack.com
+email: mehalick@gmail.com
 description: A software development process and technology blog; a look at the tools and techniques for building better software.
 baseurl: ""
 url: https://andy.mehalick.com
